--- a/index.html
+++ b/index.html
@@ -10,11 +10,25 @@
     <meta charset="UTF-8">
     <title>Per Country CO2 Emissions</title>
     <style>
-
         body {
             font: 12px Helvetica;
+            background: #ADA996;  /* fallback for old browsers */
+            background: -webkit-linear-gradient(to left, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(to left, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
         }
-
+        #background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url('co2fuel.jpeg');
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 100%;
+            opacity: 0.14;
+            z-index: unset;
+        }
         .axis line {
             fill: none;
             stroke: #000;
@@ -38,7 +52,22 @@
     </style>
 </head>
 <body>
-
+<!--<div id="background"></div>-->
+<h1 style="text-align: center;font-style: oblique"> Co2 Emissions Growth Trend by Top Countries</h1>
+<div id="messages" style="display: flex;">
+    <div id="msg1" style="margin-right: 29em;">
+        <h3>Global Emission Increase with Developing Nations</h3>
+        <p>
+            Top trend chart clearly depicts while any country is undergoing a huge development, they tend to produce more CO2
+        </p>
+    </div>
+    <div id="msg2">
+        <h3>More energy use ==> More Co2</h3>
+        <p>
+            Developing nations across Asia have started to produce more Co2 by utilizing more energy
+        </p>
+    </div>
+</div>
 <div class="container">
     <!-- Modal -->
     <div class="modal fade" id="myModal" role="dialog">
@@ -65,14 +94,18 @@
         </div>
     </div>
 </div>
-<button id="addCountry" type="button" data-toggle="modal" data-target="#myModal" class="btn btn-info btn-sm"
+<button id="addCountry" type="button" class="btn btn-info btn-sm"
         style="margin-left: 71em;position: absolute;margin-top: 6em;">
     <span class="glyphicon glyphicon-plus-sign"></span>
-    <span> Add Country </span>
+    <span> Load Animation </span>
 </button>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.16/d3.js"></script>
+<script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.9.1/d3-tip.min.js"></script>
 <script>
+    var allPaths = [];
     var countries = [];
+
     var selectOptionCountries = [];
     var margin = {top: 120, right: 150, bottom: 30, left: 50},
         width = 1030 - margin.left - margin.right,
@@ -97,7 +130,7 @@
         .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
     function chartDraw(data) {
-        console.log("chartDraw", chartDraw);
+        console.log("chartDraw", data);
         color.domain(d3.keys(data[0]).filter(function (key) {
             return key !== "date";
         }));
@@ -167,8 +200,7 @@
         x.domain(d3.extent(data, function (d) {
             return d.date;
         }));
-        /* console.log("MAX", d3.max(d3.values(companies[0].values)));
-         console.log("MIN", d3.min(companies[1].values, function(v) { return v.price; }));*/
+
         console.log("a", d3.max(companies, function (c) {
             return d3.max(c.values, function (v) {
                 return v.price;
@@ -179,8 +211,7 @@
                 return v.price;
             });
         }));
-        /* console.log("c", d3.max(companies, function(c) { return d3.min(c.values, function(v) { return v.price; }); }));
-         console.log("d",  d3.max(companies, function(c) { return d3.max(c.values, function(v) { return v.price; }); }));*/
+
         y.domain([
             d3.min(companies, function (c) {
                 return d3.min(c.values, function (v) {
@@ -253,72 +284,27 @@
             .enter().append("g")
             .attr("class", "company");
 
-        var path =company.append("path")
+        var path = company.append("path")
             .attr("class", "line")
             .attr("d", function (d) {
                 console.log("pat", JSON.stringify(d));
                 return line(d.values);
             })
             .style("stroke", function (d) {
-                /*if (d.name == "USA") {
-                    return "cyan"
-                } else if (d.name == "India") {
-                    return "green"
-                } else if (d.name == "Russia") {
-                    // return "purple"
-                } else if (d.name == "China") {
-                    return "blue"
-                }
-                else {return "#000";}*/
                 return color(d.name);
             });
+        allPaths = path;
         d3.select('.legend').remove();
 
         var legend = svg.selectAll(".company")
             .append('g')
             .attr('class', 'legend');
 
-        //var totalLength = path.node().getTotalLength();
-        /* console.log(path);
-         console.log(path[0].length);
-         console.log(path.node());
-         console.log(path[0][0]);
-         console.log(path[0][1]);*/
-        // var totalLength = [path[0][0].getTotalLength(), path[0][1].getTotalLength()];
-        for (var i = 0; i < path[0].length; i++) {
-            // console.log("path[i]", path[0][i]);
-            var totalLength = path[0][i].getTotalLength();
-            d3.select(path[0][i])
-                .attr("stroke-dasharray", totalLength + " " + totalLength)
-                .attr("stroke-dashoffset", totalLength)
-                .transition()
-                .duration(5000)
-                .ease("linear")
-                .attr("stroke-dashoffset", 0);
-        }
-        /*d3.select(path[0][0])
-            .attr("stroke-dasharray", totalLength[0] + " " + totalLength[0] )
-            .attr("stroke-dashoffset", totalLength[0])
-            .transition()
-            .duration(5000)
-            .ease("linear")
-            .attr("stroke-dashoffset", 0);
-
-        d3.select(path[0][1])
-            .attr("stroke-dasharray", totalLength[1] + " " + totalLength[1] )
-            .attr("stroke-dashoffset", totalLength[1])
-            .transition()
-            .duration(5000)
-            .ease("linear")
-            .attr("stroke-dashoffset", 0);*/
-
-        /*legend.append("path")
-            .attr("class", "line")
-            .attr("d", function(d) { console.log("d", d); return line(d.values); })
-            .style("stroke", function(d) { return color(d.name); });*/
+        loadAnimation(path);
 
         legend.append('rect')
             .attr('x', width - 20)
+            .attr('cursor', 'pointer')
             .attr('y', function (d, i) {
                 return i * 20;
             })
@@ -329,76 +315,259 @@
             });
 
         legend.append('text')
+            .attr("class", "legendTexts")
             .attr('x', width - 8)
+            .attr('cursor', 'pointer')
             .attr('y', function (d, i) {
                 return (i * 20) + 9;
+            })
+            .on("click", function (d) {
+                clickedPathName = "#" + d.name.replace(" ", "");
+                console.log("onclick", clickedPathName)
+                currentLineState = d3.select(clickedPathName).attr("visibility");
+                if (currentLineState == null || currentLineState == "visible") {
+                    d3.select(clickedPathName).attr("visibility", "hidden");
+
+                } else if (currentLineState == 'hidden') {
+                    d3.select(clickedPathName).attr("visibility", "visible");
+                }
+                lineThruLegendText(legend);
             })
             .text(function (d) {
                 return d.name;
             });
     }
-    function setCountries() {
-        var optionsAsString = "";
-        var displayedCountries = [];
-        svg.selectAll(".company")
-            .attr("d", function (d) {
-                displayedCountries.push(d.name);
-            });
-        for (var i = 0; i < countries.length; i++) {
-            if (displayedCountries.includes(countries[i].name)) {
-                optionsAsString += "<option value='" + countries[i].name + "' selected>" + countries[i].name + "</option>";
-            } else {
-                optionsAsString += "<option value='" + countries[i].name + "'>" + countries[i].name + "</option>";
-            }
+
+    function loadAnimation(path) {
+        for (var i = 0; i < path[0].length; i++) {
+            var totalLength = path[0][i].getTotalLength();
+            console.log("path", JSON.stringify(path[0][i].__data__.name))
+            d3.select(path[0][i])
+                .attr("stroke-dasharray", totalLength + " " + totalLength)
+                .attr("stroke-dashoffset", totalLength)
+                .transition()
+                .duration(5000)
+                .attr("id", path[0][i].__data__.name.replace(" ", ""))
+                .ease("linear")
+                .attr("stroke-dashoffset", 0);
         }
-        $('select[name="inptProduct"]').append(optionsAsString);
     }
+
+    function lineThruLegendText(legend) {
+        console.log("onclick22", clickedPathName)
+        legend.selectAll(".legendTexts")
+            .attr("text-decoration", function (d) {
+                console.log("onclick2", d)
+                console.log(JSON.stringify(d.name));
+                clickedPathName = "#" + d.name.replace(" ", "");
+                console.log("onclick222", clickedPathName)
+                currentLineState = d3.select(clickedPathName).attr("visibility");
+                if (currentLineState == null || currentLineState == "visible") {
+                    return "none";
+
+                } else if (currentLineState == 'hidden') {
+                    return "line-through";
+                }
+            })
+    }
+
     var dataset = [];
+    var mouseG = svg.append("g")
+        .attr("class", "mouse-over-effects");
+
+    mouseG.append("path") // this is the black vertical line to follow mouse
+        .attr("class", "mouse-line")
+        .style("stroke", "black")
+        .style("stroke-width", "1px")
+        .style("opacity", "0");
+
+    var lines = document.getElementsByClassName('line');
+
+
     d3.tsv("top_country.tsv", function (error, data) {
         dataset = data;
         chartDraw(data);
-        setCountries();
+        var mousePerLine = mouseG.selectAll('.mouse-per-line')
+            .data(countries)
+            .enter()
+            .append("g")
+            .attr("class", "mouse-per-line");
+
+        mousePerLine.append("circle")
+            .attr("r", 7)
+            .style("stroke", function (d) {
+                return color(d.name);
+            })
+            .style("fill", "none")
+            .style("stroke-width", "1px")
+            .style("opacity", "0");
+
+        mousePerLine.append("text")
+            .attr("transform", "translate(10,3)");
+
+        mouseG.append('svg:rect') // append a rect to catch mouse movements on canvas
+            .attr('width', width) // can't catch mouse events on a g element
+            .attr('height', height)
+            .attr('fill', 'none')
+            .attr('pointer-events', 'all')
+            .on('mouseout', function () { // on mouse out hide line, circles and text
+                d3.select(".mouse-line")
+                    .style("opacity", "0");
+                d3.selectAll(".mouse-per-line circle")
+                    .style("opacity", "0");
+                d3.selectAll(".mouse-per-line text")
+                    .style("opacity", "0");
+            })
+            .on('mouseover', function () { // on mouse in show line, circles and text
+                d3.select(".mouse-line")
+                    .style("opacity", "1");
+                d3.selectAll(".mouse-per-line circle")
+                    .style("opacity", "1");
+                d3.selectAll(".mouse-per-line text")
+                    .style("opacity", "1");
+            })
+            .on('mousemove', function () { // mouse moving over canvas
+                var mouse = d3.mouse(this);
+                d3.select(".mouse-line")
+                    .attr("d", function () {
+                        var d = "M" + mouse[0] + "," + height;
+                        d += " " + mouse[0] + "," + 0;
+                        return d;
+                    });
+                d3.selectAll(".mouse-per-line")
+                    .attr("transform", function (d, i) {
+                        /*console.log(width / mouse[0])*/
+                        var xDate = x.invert(mouse[0]),
+                            bisect = d3.bisector(function (d) {
+                                return d.date;
+                            }).right;
+                        // console.log("dataset", dataset)
+                        // console.log("xDate", typeof xDate, xDate.toString().split(" ")[3]);
+                        xDate = xDate.toString().split(" ")[3];
+                        emission = dataset.map(function (name) {
+                            return {
+                                name: name,
+                                values: data.map(function (d) {
+                                    thisDate = d.date.toString().split(" ")[3];
+                                    // console.log("xDate HEREEE", xDate, thisDate)
+                                    if (thisDate == xDate) {
+                                        //console.log("xDate HEREEE match", xDate, d.date)
+                                        return {date: d.date, price: +d[name]};
+                                    }
+                                })
+                            };
+                        });
+                        //console.log("emission here", emission);
+
+                        // idx = bisect(d.price, xDate);
+                        // console.log("idx", idx);
+                        var beginning = 0,
+                            end = lines[i].getTotalLength(),
+                            target = null;
+
+                        while (true) {
+                            target = Math.floor((beginning + end) / 2);
+                            pos = lines[i].getPointAtLength(target);
+                            if ((target === end || target === beginning) && pos.x !== mouse[0]) {
+                                break;
+                            }
+                            if (pos.x > mouse[0]) end = target;
+                            else if (pos.x < mouse[0]) beginning = target;
+                            else break; //position found
+                        }
+
+                        d3.select(this).select('text')
+                            .text(y.invert(pos.y).toFixed(2));
+
+                        return "translate(" + mouse[0] + "," + pos.y + ")";
+                    });
+
+            });
     });
-    $('#saveCountrySelect').click(function () {
-        selectOptionCountries = [];
-        console.log("hhe");
-        $('select[name="inptProduct"] option:selected').each(function () {
-            console.log("inptProduct");
-            var $this = $(this);
-            if ($this.length) {
-                var selText = $this.text();
-                selectOptionCountries.push(selText);
-                console.log(selectOptionCountries);
-            }
-        });
-        //$('#myModal').hide();
-        /* d3.tsv("newdata.tsv", function (error, data) {
-             console.log("da",JSON.stringify(data))
-             chartDraw(data);
-             setCountries();
-         });*/
-        var companies = color.domain().filter(function(filter) {
-            console.log("domain", JSON.stringify(filter));
-            if (selectOptionCountries.includes(filter)) {
-                return true; // true
-            }
-            return false; //skip
-        }).map(function (name) {
-            console.log("sel");
-            return {
-                name: name,
-                values: dataset.map(function (d) {
-                    // console.log("+d[name]", +d[name]);
-                    return {date: d.date, price: +d[name]};
-                })
-            };
-        });
-        console.log("companies", companies)
-        countries = companies;
-        console.log("countries", countries)
-        chartDraw(countries);
-        setCountries();
-    });
+            $('#saveCountrySelect').click(function () {
+                selectOptionCountries = [];
+                console.log("hhe");
+                $('select[name="inptProduct"] option:selected').each(function () {
+                    console.log("inptProduct");
+                    var $this = $(this);
+                    if ($this.length) {
+                        var selText = $this.text();
+                        selectOptionCountries.push(selText);
+                        console.log(selectOptionCountries);
+                    }
+                });
+
+                var companies = color.domain().filter(function (filter) {
+                    console.log("domain", JSON.stringify(filter));
+                    if (selectOptionCountries.includes(filter)) {
+                        return true; // true
+                    }
+                    return false; //skip
+                }).map(function (name) {
+                    console.log("sel");
+                    return {
+                        name: name,
+                        values: dataset.map(function (d) {
+                            // console.log("+d[name]", +d[name]);
+                            return {date: d.date, price: +d[name]};
+                        })
+                    };
+                });
+                console.log("companies", companies)
+                countries = companies;
+                console.log("countries", countries)
+                chartDraw(countries);
+                setCountries();
+            });
+            $('#addCountry').click(function () {
+                loadAnimation(allPaths);
+            })
+
+   /* const annotations = [{note: {
+            label: "Top trend chart clearly depicts while any country is undergoing a huge development, they tend to produce more CO2",
+            bgPadding: 20,
+            title: "Global Emission Increase with Developing Nations"
+        },
+        type: d3.annotationCalloutCircle,
+        subject: {
+            radius: 25,         // circle radius
+            radiusPadding: 20   // white space around circle befor connector
+        },
+        color: ["navy"],
+        //can use x, y directly instead of dataset
+        data: {Entity: "United Kingdom", CO2emissions: 91.0641},
+        x: 700,
+        y: 290,
+        className: "show-bg",
+        dy: 157,
+        dx: 462}/!*,
+        {note: {
+                label: "Developing nations across Asia have started to produce more Co2 by utilizing more energy",
+                bgPadding: 20,
+                title: "More energy use ==> More Co2"
+            },
+            type: d3.annotationCalloutCircle,
+            subject: {
+                radius: 25,         // circle radius
+                radiusPadding: 20   // white space around circle befor connector
+            },
+            color: ["navy"],
+            //can use x, y directly instead of dataset
+            data: {Entity: "United Kingdom", CO2emissions: 91.0641},
+            x: 700,
+            y: 290,
+            className: "show-bg",
+            dy: 157,
+            dx: 462}*!/]
+    const type = d3.annotationLabel;
+    const makeAnnotations = d3.annotation()
+        .notePadding(15)
+        .type(type)
+        .annotations(annotations)
+    d3.select("svg")
+        .append("g")
+        .attr("class", "annotation-group" + yearValue)
+        .call(makeAnnotations)*/
 
 </script>
 </body>
